# TienKung_dex_deploy

./: .gitignore  CLAUDE.md  README.md  init_env.sh  run_real.sh  run_sim.sh
src/rl_control/: .gitignore  LICENSE.txt  README.md  __init__.py  package.xml  requirements_22.txt  requirements_24.txt  rl_control_node.py  rl_control_node_sim.py  setup.py
src/rl_control/FSM/: fsm_base.py  robot_fsm.py
src/rl_control/common/: BasicFunction.py  body_id_map.py  joystick.py  peekqueue.py  robot_data.py  robot_interface.py  stdin_keyboard_control.py  xbox_control.py
src/rl_control/config/: dex_config.yaml  dex_config_real.yaml  dex_config_sim.yaml
src/rl_control/launch/: real.launch.py  sim.launch.py
src/rl_control/lib/22/: ros-humble-bodyctrl-msgs_0.0.0-0jammy_amd64.deb  sptlib_python-0.1.0-cp310-cp310-linux_x86_64.whl
src/rl_control/lib/24/: ros-jazzy-bodyctrl-msgs_0.0.0-0noble_amd64.deb  sptlib_python-0.1.0-cp312-cp312-linux_x86_64.whl
src/rl_control/policy/beyondzero/: __init__.py  fsm_beyondzero.py
src/rl_control/policy/beyondzero/config/: beyondzero.yaml
src/rl_control/policy/mimic/: fsm_mimic.py
src/rl_control/policy/mimic/config/: mimic.yaml  mimic_real.yaml
src/rl_control/policy/niukua/: fsm_beyond_mimic.py
src/rl_control/policy/niukua/config/: niukua.yaml
src/rl_control/policy/stop/: fsm_stop.py
src/rl_control/policy/stop/config/: stop.yaml
src/rl_control/policy/walk_amp/: fsm_walkamp.py
src/rl_control/policy/walk_amp/config/: walk_amp.yaml
src/rl_control/policy/zero/: fsm_zero.py
src/rl_control/scripts/: detect_xbox_buttons.py
(+21 files in other folders)
