<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rl_control</name>
  <version>0.1.0</version>
  <description>xMIGCS RL control node with FSM-based policy switching for humanoid robots.</description>
  <maintainer email="soom@example.com">Soom</maintainer>
  <license>Proprietary</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>bodyctrl_msgs</depend>

  <exec_depend>sim_joy</exec_depend>
  <exec_depend>mujoco_node</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
